# Scriba

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE.md  README.md  SharedEditor.pro  creaDB.sql  docker-cleanup.sh  docker-entrypoint.sh  docker-start.sh
CRDT_LSEQ/: CMakeLists.txt  Message.cpp  Message.h  NetworkServer.cpp  NetworkServer.h  SharedEditor.cpp  SharedEditor.h  Symbol.cpp  Symbol.h  main.cpp
CRDT_LSEQ_v2/: CMakeLists.txt  Message.h  NetworkServer.cpp  SharedEditor.h
Certificates/: client.crt  client.csr
Client/: AppMainWindow.h  AppMainWindows.cpp  CMakeLists.txt  CRDT.cpp  CRDT.h  Client.pro  Client.pro.user.163df52.4.8-pre1  appMainWindow.cpp  appMainWindow.h  buttonhoverwatcher.cpp  buttonhoverwatcher.h  char.cpp  char.h  clickablelabel.cpp  clickablelabel.h  client.cpp  client.h  client.qrc  colors.h  database.cpp  database.h  editor.cpp  editor.h  editor.ui  highlighter.cpp  highlighter.h  home.cpp  home.h  home.ui  index.cpp  index.h  index.ui  login.cpp  login.h  login.ui  main.cpp  message.h  modify.cpp  modify.h  modify.ui  (+10 more)
Client/certificates/: rootCA.crt  rootCA.key  rootCA.srl
Docker/: docker-cleanup.sh  docker-start.sh
Docker/db/: Dockerfile
Docker/server/: Dockerfile  docker-entrypoint.sh
Resources/CRDT_LSEQ_implementation_in_c++/: NetworkServer.h  SharedEditor.h  Symbol.h  main.cpp
Server/: Server.pro  colors.h  database.cpp  database.h  main.cpp  mongo.cpp  mongo.h  serializeSize.h  server.cpp  server.h  server.qrc  serverwindow.cpp  serverwindow.h  serverwindow.ui  serverworker.cpp  serverworker.h
Server/certificates/: generate_server_crt.sh  server.crt  server.csr  server.key
Utility/: byte_reader.h  common.h  font.txt  serializesize.h  symbol.h
build-Client-Desktop_Qt_5_12_2_clang_64bit-Debug/: .qmake.stash  Makefile  moc_editor.cpp  moc_home.cpp  moc_login.cpp  qrc_client.cpp  ui_editor.h  ui_home.h  ui_login.h
build-Client-Desktop_Qt_5_12_5_clang_64bit-Debug/: Makefile  moc_AppMainWindow.cpp  moc_client.cpp  moc_editor.cpp  moc_home.cpp  moc_index.cpp  moc_login.cpp  moc_signup.cpp  qrc_client.cpp  ui_editor.h  ui_home.h  ui_index.h  ui_login.h  ui_signup.h
build-Server-Desktop_Qt_5_12_5_clang_64bit-Debug/: .qmake.stash  Makefile  moc_server.cpp  moc_serverwindow.cpp  moc_serverworker.cpp  ui_serverwindow.h
build-Server-Desktop_Qt_5_12_5_clang_64bit-Debug/Server.app/Contents/: Info.plist
build-Server-Desktop_Qt_5_12_5_clang_64bit-Debug/Server.app/Contents/MacOS/: Server
certificates/: client.key  client.pem  private_key.pem  server.csr  server.pem  server.srl
