cmake_minimum_required(VERSION 3.13)
project(SharedEditor)

set(CMAKE_CXX_STANDARD 14)

include_directories(3rdparty)
include_directories(3rdparty/libsodium)
include_directories(3rdparty/libsodium/1.0.18)
include_directories(3rdparty/libsodium/1.0.18/include)
include_directories(3rdparty/libsodium/1.0.18/include/sodium)
include_directories(build-Client-Desktop_Qt_5_12_5_clang_64bit-Debug)
include_directories(build-Server-Desktop_Qt_5_12_5_clang_64bit-Debug)
include_directories(Client)
include_directories(cmake-build-debug)
include_directories(CRDT_LSEQ)
include_directories(CRDT_LSEQ_v2)
include_directories(Server)

add_executable(SharedEditor
        3rdparty/libsodium/1.0.18/include/sodium/core.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_aead_aes256gcm.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_aead_chacha20poly1305.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_aead_xchacha20poly1305.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_auth.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_auth_hmacsha256.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_auth_hmacsha512.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_auth_hmacsha512256.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_box.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_box_curve25519xchacha20poly1305.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_box_curve25519xsalsa20poly1305.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_core_ed25519.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_core_hchacha20.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_core_hsalsa20.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_core_ristretto255.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_core_salsa20.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_core_salsa2012.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_core_salsa208.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_generichash.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_generichash_blake2b.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_hash.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_hash_sha256.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_hash_sha512.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_kdf.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_kdf_blake2b.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_kx.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_onetimeauth.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_onetimeauth_poly1305.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_pwhash.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_pwhash_argon2i.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_pwhash_argon2id.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_pwhash_scryptsalsa208sha256.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_scalarmult.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_scalarmult_curve25519.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_scalarmult_ed25519.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_scalarmult_ristretto255.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_secretbox.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_secretbox_xchacha20poly1305.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_secretbox_xsalsa20poly1305.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_secretstream_xchacha20poly1305.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_shorthash.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_shorthash_siphash24.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_sign.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_sign_ed25519.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_sign_edwards25519sha512batch.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_stream.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_stream_chacha20.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_stream_salsa20.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_stream_salsa2012.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_stream_salsa208.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_stream_xchacha20.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_stream_xsalsa20.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_verify_16.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_verify_32.h
        3rdparty/libsodium/1.0.18/include/sodium/crypto_verify_64.h
        3rdparty/libsodium/1.0.18/include/sodium/export.h
        3rdparty/libsodium/1.0.18/include/sodium/randombytes.h
        3rdparty/libsodium/1.0.18/include/sodium/randombytes_internal_random.h
        3rdparty/libsodium/1.0.18/include/sodium/randombytes_sysrandom.h
        3rdparty/libsodium/1.0.18/include/sodium/runtime.h
        3rdparty/libsodium/1.0.18/include/sodium/utils.h
        3rdparty/libsodium/1.0.18/include/sodium/version.h
        3rdparty/libsodium/1.0.18/include/sodium.h
        build-Client-Desktop_Qt_5_12_5_clang_64bit-Debug/Client.app/Contents/MacOS/Client
        build-Client-Desktop_Qt_5_12_5_clang_64bit-Debug/Client.app/Contents/Resources/empty.lproj
        build-Client-Desktop_Qt_5_12_5_clang_64bit-Debug/Client.app/Contents/Info.plist
        build-Client-Desktop_Qt_5_12_5_clang_64bit-Debug/Client.app/Contents/PkgInfo
        build-Client-Desktop_Qt_5_12_5_clang_64bit-Debug/appMainWindow.o
        build-Client-Desktop_Qt_5_12_5_clang_64bit-Debug/AppMainWindows.o
        build-Client-Desktop_Qt_5_12_5_clang_64bit-Debug/client.o
        build-Client-Desktop_Qt_5_12_5_clang_64bit-Debug/CRDT.o
        build-Client-Desktop_Qt_5_12_5_clang_64bit-Debug/editor.o
        build-Client-Desktop_Qt_5_12_5_clang_64bit-Debug/home.o
        build-Client-Desktop_Qt_5_12_5_clang_64bit-Debug/login.o
        build-Client-Desktop_Qt_5_12_5_clang_64bit-Debug/main.o
        build-Client-Desktop_Qt_5_12_5_clang_64bit-Debug/Makefile
        build-Client-Desktop_Qt_5_12_5_clang_64bit-Debug/moc_AppMainWindow.cpp
        build-Client-Desktop_Qt_5_12_5_clang_64bit-Debug/moc_AppMainWindow.o
        build-Client-Desktop_Qt_5_12_5_clang_64bit-Debug/moc_char.cpp
        build-Client-Desktop_Qt_5_12_5_clang_64bit-Debug/moc_client.cpp
        build-Client-Desktop_Qt_5_12_5_clang_64bit-Debug/moc_client.o
        build-Client-Desktop_Qt_5_12_5_clang_64bit-Debug/moc_CRDT.cpp
        build-Client-Desktop_Qt_5_12_5_clang_64bit-Debug/moc_CRDT.o
        build-Client-Desktop_Qt_5_12_5_clang_64bit-Debug/moc_editor.cpp
        build-Client-Desktop_Qt_5_12_5_clang_64bit-Debug/moc_editor.o
        build-Client-Desktop_Qt_5_12_5_clang_64bit-Debug/moc_home.cpp
        build-Client-Desktop_Qt_5_12_5_clang_64bit-Debug/moc_home.o
        build-Client-Desktop_Qt_5_12_5_clang_64bit-Debug/moc_login.cpp
        build-Client-Desktop_Qt_5_12_5_clang_64bit-Debug/moc_login.o
        build-Client-Desktop_Qt_5_12_5_clang_64bit-Debug/moc_modify.cpp
        build-Client-Desktop_Qt_5_12_5_clang_64bit-Debug/moc_modify.o
        build-Client-Desktop_Qt_5_12_5_clang_64bit-Debug/moc_predefs.h
        build-Client-Desktop_Qt_5_12_5_clang_64bit-Debug/moc_signup.cpp
        build-Client-Desktop_Qt_5_12_5_clang_64bit-Debug/moc_signup.o
        build-Client-Desktop_Qt_5_12_5_clang_64bit-Debug/modify.o
        build-Client-Desktop_Qt_5_12_5_clang_64bit-Debug/qrc_client.cpp
        build-Client-Desktop_Qt_5_12_5_clang_64bit-Debug/qrc_client.o
        build-Client-Desktop_Qt_5_12_5_clang_64bit-Debug/signup.o
        build-Client-Desktop_Qt_5_12_5_clang_64bit-Debug/ui_editor.h
        build-Client-Desktop_Qt_5_12_5_clang_64bit-Debug/ui_home.h
        build-Client-Desktop_Qt_5_12_5_clang_64bit-Debug/ui_index.h
        build-Client-Desktop_Qt_5_12_5_clang_64bit-Debug/ui_login.h
        build-Client-Desktop_Qt_5_12_5_clang_64bit-Debug/ui_modify.h
        build-Client-Desktop_Qt_5_12_5_clang_64bit-Debug/ui_signup.h
        build-Server-Desktop_Qt_5_12_5_clang_64bit-Debug/Server.app/Contents/MacOS/profile_images/enzo@l.it.png
        build-Server-Desktop_Qt_5_12_5_clang_64bit-Debug/Server.app/Contents/MacOS/profile_images/f@l.it.png
        build-Server-Desktop_Qt_5_12_5_clang_64bit-Debug/Server.app/Contents/MacOS/profile_images/g@l.it.png
        build-Server-Desktop_Qt_5_12_5_clang_64bit-Debug/Server.app/Contents/MacOS/profile_images/giuseppe.pastore10@libero.it.png
        build-Server-Desktop_Qt_5_12_5_clang_64bit-Debug/Server.app/Contents/MacOS/profile_images/giuseppe@l.it.png
        build-Server-Desktop_Qt_5_12_5_clang_64bit-Debug/Server.app/Contents/MacOS/profile_images/s@l.it.png
        build-Server-Desktop_Qt_5_12_5_clang_64bit-Debug/Server.app/Contents/MacOS/user_documents/s@l.it_ciao
        build-Server-Desktop_Qt_5_12_5_clang_64bit-Debug/Server.app/Contents/MacOS/user_documents/s@l.it_ciuy
        build-Server-Desktop_Qt_5_12_5_clang_64bit-Debug/Server.app/Contents/MacOS/user_documents/s@l.it_uyt
        build-Server-Desktop_Qt_5_12_5_clang_64bit-Debug/Server.app/Contents/MacOS/Server
        build-Server-Desktop_Qt_5_12_5_clang_64bit-Debug/Server.app/Contents/Resources/empty.lproj
        build-Server-Desktop_Qt_5_12_5_clang_64bit-Debug/Server.app/Contents/Info.plist
        build-Server-Desktop_Qt_5_12_5_clang_64bit-Debug/Server.app/Contents/PkgInfo
        build-Server-Desktop_Qt_5_12_5_clang_64bit-Debug/database.o
        build-Server-Desktop_Qt_5_12_5_clang_64bit-Debug/main.o
        build-Server-Desktop_Qt_5_12_5_clang_64bit-Debug/Makefile
        build-Server-Desktop_Qt_5_12_5_clang_64bit-Debug/moc_predefs.h
        build-Server-Desktop_Qt_5_12_5_clang_64bit-Debug/moc_server.cpp
        build-Server-Desktop_Qt_5_12_5_clang_64bit-Debug/moc_server.o
        build-Server-Desktop_Qt_5_12_5_clang_64bit-Debug/moc_serverwindow.cpp
        build-Server-Desktop_Qt_5_12_5_clang_64bit-Debug/moc_serverwindow.o
        build-Server-Desktop_Qt_5_12_5_clang_64bit-Debug/moc_serverworker.cpp
        build-Server-Desktop_Qt_5_12_5_clang_64bit-Debug/moc_serverworker.o
        build-Server-Desktop_Qt_5_12_5_clang_64bit-Debug/server.o
        build-Server-Desktop_Qt_5_12_5_clang_64bit-Debug/serverwindow.o
        build-Server-Desktop_Qt_5_12_5_clang_64bit-Debug/serverworker.o
        build-Server-Desktop_Qt_5_12_5_clang_64bit-Debug/ui_serverwindow.h
        Client/images/anonymous.jpg
        Client/images/bold.png
        Client/images/copy.png
        Client/images/create.png
        Client/images/cut.png
        Client/images/edit_redo.png
        Client/images/edit_undo.png
        Client/images/exit.png
        Client/images/font.png
        Client/images/info.png
        Client/images/italic.png
        Client/images/new.png
        Client/images/open.png
        Client/images/paste.png
        Client/images/pencil.png
        Client/images/print.png
        Client/images/save.png
        Client/images/save_as.png
        Client/images/share.png
        Client/images/underline.png
        Client/appMainWindow.cpp
        Client/appMainWindow.h
        Client/char.cpp
        Client/char.h
        Client/client.cpp
        Client/client.h
        Client/Client.pro
        Client/Client.pro.user
        Client/Client.pro.user.163df52.4.8-pre1
        Client/client.qrc
        Client/CRDT.cpp
        Client/CRDT.h
        Client/editor.cpp
        Client/editor.h
        Client/editor.ui
        Client/home.cpp
        Client/home.h
        Client/home.ui
        Client/index.ui
        Client/login.cpp
        Client/login.h
        Client/login.ui
        Client/main.cpp
        Client/modify.cpp
        Client/modify.h
        Client/modify.ui
        Client/signup.cpp
        Client/signup.h
        Client/signup.ui
        Client/symbol.h
        cmake-build-debug/cmake_install.cmake
        cmake-build-debug/CMakeCache.txt
        cmake-build-debug/Makefile
        cmake-build-debug/SharedEditor.cbp
        CRDT_LSEQ/cmake-build-debug/cmake_install.cmake
        CRDT_LSEQ/cmake-build-debug/CMakeCache.txt
        CRDT_LSEQ/cmake-build-debug/Esercitazione_3
        CRDT_LSEQ/cmake-build-debug/Esercitazione_3.cbp
        CRDT_LSEQ/cmake-build-debug/Makefile
        CRDT_LSEQ/CMakeLists.txt
        CRDT_LSEQ/main.cpp
        CRDT_LSEQ/Message.cpp
        CRDT_LSEQ/Message.h
        CRDT_LSEQ/NetworkServer.cpp
        CRDT_LSEQ/NetworkServer.h
        CRDT_LSEQ/SharedEditor.cpp
        CRDT_LSEQ/SharedEditor.h
        CRDT_LSEQ/Symbol.cpp
        CRDT_LSEQ/Symbol.h
        CRDT_LSEQ_v2/CMakeLists.txt
        CRDT_LSEQ_v2/main.cpp
        CRDT_LSEQ_v2/Message.h
        CRDT_LSEQ_v2/NetworkServer.cpp
        CRDT_LSEQ_v2/NetworkServer.h
        CRDT_LSEQ_v2/README.md
        CRDT_LSEQ_v2/SharedEditor.h
        CRDT_LSEQ_v2/Symbol.h
        Server/colors.h
        Server/database.cpp
        Server/database.h
        Server/main.cpp
        Server/server.cpp
        Server/server.h
        Server/Server.pro
        Server/serverwindow.cpp
        Server/serverwindow.h
        Server/serverwindow.ui
        Server/serverworker.cpp
        Server/serverworker.h
        CMakeLists.txt
        creaDB.sql
        project_requirements.pdf
        README.md
        SharedEditor.pro)
